feat(server): add master output class
The previous several classes for wl_output, xdg-output and output_device_v1 in
the Server library that a compositor had to interact with are replaced with a
single master class that mediates and controls functionality of the other
classes.

A compositor only needs to deal with this class instead of all the other ones.
Additionally the update procedure is improved by that: the done() call has a
centralized entrance point and internally the Output class forwards this to
other classes if they are enabled. Changes are applied atomically throughout.

BREAKING CHANGE: The Server Output class is refactored as a single access
point for the compositor.

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SERVER_LIB_SRCS
     keystate.cpp
     keyboard_shortcuts_inhibit.cpp
     linux_dmabuf_v1.cpp
+    output.cpp
     output_changeset_v1.cpp
     output_configuration_v1.cpp
     output_device_v1.cpp
@@ -325,7 +326,7 @@ set(SERVER_LIB_HEADERS
   keystate.h
   keyboard_shortcuts_inhibit.h
   linux_dmabuf_v1.h
-  wl_output.h
+  output.h
   output_changeset_v1.h
   output_configuration_v1.h
   output_device_v1.h
@@ -348,6 +349,7 @@ set(SERVER_LIB_HEADERS
   text_input_v2.h
   touch.h
   viewporter.h
+  wl_output.h
   xdg_decoration.h
   xdg_output.h
   xdg_foreign.h
