--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,11 +107,18 @@ Autotests:
   script:
     - *common-test-script
     # Coverage report created from source dir with build dir exluded (MOC files etc.).
+    # First invokation for the GitLab pipeline regex, second for GitLab pages publishing.
     - cd ..
     - gcovr -e ci-build -e tests -r . ci-build
+    - mkdir coverage-html-output
+    - gcovr --html-details coverage-html-output/coverage.html -e ci-build -e tests -r . ci-build
   needs:
     - job: Coverage build
       artifacts: true
+  artifacts:
+    paths:
+      - coverage-html-output
+    expire_in: 1 week
 
 Sanitizers:
   <<: *common-test
@@ -121,6 +128,22 @@ Sanitizers:
     - job: Sanitizers build
       artifacts: true
 
+
+pages:
+  stage: Integration
+  rules:
+    - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_BRANCH == "master"'
+      when: on_success
+    - when: never
+  needs:
+    - job: Autotests
+      artifacts: true
+  script:
+    - mv coverage-html-output public
+  artifacts:
+    paths:
+      - public
+    expire_in: 1 week
 
 Master image trigger:
   stage: Integration
