--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,31 +18,12 @@ include:
     file:
       - '/analysis/gitlab-ci/static.yml'
       - '/analysis/gitlab-ci/tests.yml'
+      - '/docs/gitlab-ci/commits.yml'
 
 
 Message lint:
+  extends: .message-lint
   stage: Compliance 1
-  image: node:latest
-  rules:
-    - if: $CI_MERGE_REQUEST_IID
-      when: always
-    - if: '$CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH =~ /^Plasma\// || $CI_COMMIT_TAG'
-      when: never
-    - when: always
-  variables:
-    UPSTREAM: https://${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD}@${CI_SERVER_HOST}/kwinft/wrapland.git
-  script:
-    - if [ -n "$CI_MERGE_REQUEST_TARGET_BRANCH_NAME" ];
-      then export COMPARE_BRANCH=$CI_MERGE_REQUEST_TARGET_BRANCH_NAME; else export COMPARE_BRANCH=master; fi
-    - "echo Branch to compare: $COMPARE_BRANCH"
-    - yarn global add @commitlint/cli
-    - yarn add conventional-changelog-conventionalcommits
-    - git remote add _upstream $UPSTREAM || git remote set-url _upstream $UPSTREAM
-    - git fetch -q _upstream $COMPARE_BRANCH
-    - commitlint --verbose --config=ci/compliance/commitlint.config.js --from=_upstream/$COMPARE_BRANCH
-  cache:
-    paths:
-      - node_modules/
 
 clang-format:
   extends: .clang-format
