--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,9 +31,19 @@ clang-format:
   image: ${IMAGE_BASE}
 
 
+Coverity Scan:
+  extends: .coverity-scan
+  stage: Build
+  image: ${IMAGE_BASE}
+
+
 .common-build: &common-build
   stage: Build
   image: ${IMAGE_BASE}
+  rules:
+    - if: '$COVERITY_SCAN_RUN'
+      when: never
+    - when: on_success
   artifacts:
     paths:
       - build
@@ -109,6 +119,8 @@ pages:
 Master image trigger:
   stage: Integration
   rules:
+    - if: '$COVERITY_SCAN_RUN'
+      when: never
     - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_BRANCH == "master" && $CI_PIPELINE_SOURCE == "push"'
       when: on_success
     - when: never
@@ -121,6 +133,8 @@ Master image trigger:
 Stable image trigger:
   stage: Integration
   rules:
+    - if: '$COVERITY_SCAN_RUN'
+      when: never
     - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_BRANCH =~ /^Plasma\// && $CI_PIPELINE_SOURCE == "push"'
       when: on_success
     - when: never
@@ -134,6 +148,8 @@ Stable image trigger:
 Stable image tag trigger:
   stage: Integration
   rules:
+    - if: '$COVERITY_SCAN_RUN'
+      when: never
     - if: '$CI_PROJECT_NAMESPACE == "kwinft" && $CI_COMMIT_TAG =~ /^wrapland@/ && $CI_PIPELINE_SOURCE == "push"'
       when: on_success
     - when: never
