--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,6 +44,8 @@ Coverity Scan:
   extends: .coverity-scan
   stage: Build
   image: ${IMAGE_BASE}
+  variables:
+    PROJECT_NAME: Wrapland
 
 .common-build:
   variables:
