ci: install ECM on Coverity Scan
The build needs ECM to succeed.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,9 @@ Coverity Scan:
   image: ${IMAGE_BASE}
   variables:
     PROJECT_NAME: Wrapland
+  script:
+    - pacman -Sy extra-cmake-modules --noconfirm --needed
+    - !reference [.coverity-scan, script]
 
 .common-build:
   variables:
