feat(client): add support for wlr_layer_shell_unstable_v1
Add a client API for the wlroots protocol. Also add a unit test to check its
behavior together with the server API.

--- a/autotests/client/CMakeLists.txt
+++ b/autotests/client/CMakeLists.txt
@@ -52,6 +52,15 @@ if(Wayland_VERSION VERSION_GREATER "1.4.0")
 endif()
 
 ########################################################
+# Test layer-shell
+########################################################
+set(test_layer_shell_SRCS layer_shell.cpp)
+add_executable(testLayerShell ${test_layer_shell_SRCS})
+target_link_libraries(testLayerShell Qt5::Test Qt5::Gui Wrapland::Client Wrapland::Server Wayland::Client)
+add_test(NAME wrapland-testLayerShell COMMAND testLayerShell)
+ecm_mark_as_test(testLayerShell)
+
+########################################################
 # Test WaylandOutput
 ########################################################
 set(testOutput_SRCS output.cpp)
