--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -43,6 +43,7 @@ set(SERVER_LIB_SRCS
     subcompositor.cpp
     surface.cpp
     text_input_v2.cpp
+    text_input_v3.cpp
     touch.cpp
     viewporter.cpp
     wayland/buffer_manager.cpp
@@ -135,6 +136,11 @@ ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
 ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
     PROTOCOL ${Wrapland_SOURCE_DIR}/src/client/protocols/text-input-unstable-v2.xml
     BASENAME text-input-unstable-v2
+)
+
+ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
+    PROTOCOL ${WaylandProtocols_DATADIR}/unstable/text-input/text-input-unstable-v3.xml
+    BASENAME text-input-unstable-v3
 )
 
 ecm_add_wayland_server_protocol(SERVER_LIB_SRCS
@@ -273,6 +279,8 @@ set(SERVER_GENERATED_SRCS
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-input-unstable-v2-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-input-unstable-v2-server-protocol.h
+    ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-input-unstable-v3-client-protocol.h
+    ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-input-unstable-v3-server-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-text-server-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-viewporter-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-viewporter-server-protocol.h
@@ -367,6 +375,7 @@ set(SERVER_LIB_HEADERS
   subcompositor.h
   surface.h
   text_input_v2.h
+  text_input_v3.h
   touch.h
   viewporter.h
   wl_output.h
