refactor(client): rename text-input files
The files will in the future contain only a flat implementation of the v2
protocol. Add a v2 suffix to the file names as preperation for that.

BREAKING CHANGE: text-input header file name changes

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -52,7 +52,7 @@ set(CLIENT_LIB_SRCS
     subsurface.cpp
     surface.cpp
     touch.cpp
-    textinput.cpp
+    text_input_v2.cpp
     viewporter.cpp
     wlr_output_configuration_v1.cpp
     wlr_output_manager_v1.cpp
@@ -336,7 +336,7 @@ set(CLIENT_LIB_HEADERS
   subsurface.h
   surface.h
   touch.h
-  textinput.h
+  text_input_v2.h
   viewporter.h
   xdg_activation_v1.h
   xdgdecoration.h
