--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -23,6 +23,7 @@ set(CLIENT_LIB_SRCS
     fullscreen_shell.cpp
     idle.cpp
     idleinhibit.cpp
+    input_method_v2.cpp
     keyboard.cpp
     keystate.cpp
     keyboard_shortcuts_inhibit.cpp
@@ -119,6 +120,10 @@ ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
 ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
     PROTOCOL ${Wrapland_SOURCE_DIR}/src/client/protocols/fake-input.xml
     BASENAME fake-input
+)
+ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
+    PROTOCOL ${Wrapland_SOURCE_DIR}/src/client/protocols/input-method-unstable-v2.xml
+    BASENAME input-method-v2
 )
 
 ecm_add_wayland_client_protocol(CLIENT_LIB_SRCS
@@ -238,6 +243,7 @@ set(CLIENT_GENERATED_FILES
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-plasma-shell-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-plasma-window-management-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-idle-client-protocol.h
+    ${CMAKE_CURRENT_BINARY_DIR}/wayland-input-method-v2-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-fake-input-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-shadow-client-protocol.h
     ${CMAKE_CURRENT_BINARY_DIR}/wayland-blur-client-protocol.h
@@ -309,6 +315,7 @@ set(CLIENT_LIB_HEADERS
   fullscreen_shell.h
   idle.h
   idleinhibit.h
+  input_method_v2.h
   keyboard.h
   keystate.h
   keyboard_shortcuts_inhibit.h
